Fixed word wrap bug on ticker

--- a/app/assets/stylesheets/ticker.css
+++ b/app/assets/stylesheets/ticker.css
@@ -8,6 +8,7 @@
   font-size: 1.5em;
   color: #FFFFFF;
   animation: marquee 15s linear infinite;
+  white-space: nowrap;
 }
 
 @keyframes marquee {
